front/fix(ui): increase DropSelect menu z-index to prevent overlap

--- a/front/src/app/styles/tailwind.css
+++ b/front/src/app/styles/tailwind.css
@@ -150,6 +150,7 @@
     .rs__menu {
         background-color: var(--color-underground-primary) !important;
         border: 1px solid var(--color-gray-g3) !important;
+        z-index: 50 !important;
     }
     .rs__single-value {
         color: var(--color-dark) !important;
